argocd/apps/media-server/qbittorrent/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: qbittorrent-app
  name: qbittorrent-httproute
  namespace: qbittorrent
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - qbit.yanello.net
  rules:
  - backendRefs:
    - name: qbittorrent
      namespace: qbittorrent
      port: 8080
