argocd/apps/media-server/qbittorrent/manifests/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: qbittorrent-vs
spec:
  hosts:
  - qbit.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: qbittorrent
        port:
          number: 8080
